Sizes variables refactoring - generic

--- a/scss/widgets/generic/common/_index.scss
+++ b/scss/widgets/generic/common/_index.scss
@@ -8,6 +8,11 @@
 @use "../list/sizes" as *;
 
 // adduse
+
+$generic-dropdownlist-min-height:
+  $generic-base-font-size * $generic-base-line-height +
+  2 * $generic-list-item-vertical-padding;
+
 .dx-theme-marker {
   font-family: "dx.generic#{$generic-color-postfix}#{$generic-size-postfix}";
 }
