--- a/scss/widgets/generic/fieldset/_index.scss
+++ b/scss/widgets/generic/fieldset/_index.scss
@@ -6,6 +6,9 @@
 @use "../common/sizes" as *;
 @use "../common" as *;
 @use "../typography" as *;
+@use "../checkBox/sizes" as *;
+@use "../switch/sizes" as *;
+@use "../slider/sizes" as *;
 
 // adduse
 
