--- a/scss/widgets/generic/scheduler/_index.scss
+++ b/scss/widgets/generic/scheduler/_index.scss
@@ -31,6 +31,7 @@
 @use "../button/colors" as *;
 @use "../button" as *;
 @use "../tooltip/colors" as *;
+@use "../typography/sizes" as *;
 
 // adduse
 @use "../recurrenceEditor" as *;
