--- a/scss/widgets/generic/checkBox/_sizes.scss
+++ b/scss/widgets/generic/checkBox/_sizes.scss
@@ -6,17 +6,18 @@
 $generic-checkbox-arrow-icon-size: null !default;
 $generic-checkbox-intermidiate-icon-size: null !default;
 $generic-checkbox-intermidiate-icon-margin: null !default;
+$generic-checkbox-size: null !default;
 
 @if $size == "default" {
   $generic-checkbox-arrow-icon-size: 16px;
-
   $generic-checkbox-intermidiate-icon-size: 14px;
   $generic-checkbox-intermidiate-icon-margin: 4px;
+  $generic-checkbox-size: 22px;
 }
 
 @else if $size == "compact" {
   $generic-checkbox-arrow-icon-size: 10px;
-
   $generic-checkbox-intermidiate-icon-size: 8px;
   $generic-checkbox-intermidiate-icon-margin: 3px;
+  $generic-checkbox-size: 16px;
 }
