--- a/scss/widgets/generic/dataGrid/_sizes.scss
+++ b/scss/widgets/generic/dataGrid/_sizes.scss
@@ -2,3 +2,13 @@
 
 // adduse
 
+$generic-datagrid-cell-padding: null !default;
+
+@if $size == "default" {
+  $generic-datagrid-cell-padding: 7px;
+}
+
+@else if $size == "compact" {
+  $generic-datagrid-cell-padding: 5px;
+}
+
