--- a/scss/widgets/generic/switch/_sizes.scss
+++ b/scss/widgets/generic/switch/_sizes.scss
@@ -8,6 +8,7 @@ $generic-switch-handle-offset: null !default;
 $generic-switch-container-adjustment: null !default;
 $generic-switch-font-size: null !default;
 $generic-switch-on-off-adding-padding: null !default;
+$generic-switch-height: null !default;
 
 @if $size == "default" {
   $generic-switch-width: 44px;
@@ -16,6 +17,7 @@ $generic-switch-on-off-adding-padding: null !default;
   $generic-switch-container-adjustment: 6px;
   $generic-switch-font-size: 9px;
   $generic-switch-on-off-adding-padding: 2px;
+  $generic-switch-height: 24px;
 }
 
 @else if $size == "compact" {
@@ -25,4 +27,5 @@ $generic-switch-on-off-adding-padding: null !default;
   $generic-switch-container-adjustment: 4px;
   $generic-switch-font-size: 8px;
   $generic-switch-on-off-adding-padding: 0;
+  $generic-switch-height: 18px;
 }
