--- a/scss/widgets/material/dropDownEditor/_index.scss
+++ b/scss/widgets/material/dropDownEditor/_index.scss
@@ -78,12 +78,12 @@ $material-dropdowneditor-invalid-badge-size: $material-invalid-badge-size + $mat
   &.dx-dropdowneditor-button-visible {
     &.dx-editor-underlined {
       .dx-texteditor-input {
-        padding-right: $material-dropdowneditor-invalid-badge-size + $material-standard-texteditor-input-horizontal-padding;
+        padding-right: $material-dropdowneditor-invalid-badge-size + $material-base-standard-texteditor-input-horizontal-padding;
       }
 
       &.dx-rtl .dx-texteditor-input {
-        padding-right: $material-standard-texteditor-input-horizontal-padding;
-        padding-left: $material-dropdowneditor-invalid-badge-size + $material-standard-texteditor-input-horizontal-padding;
+        padding-right: $material-base-standard-texteditor-input-horizontal-padding;
+        padding-left: $material-dropdowneditor-invalid-badge-size + $material-base-standard-texteditor-input-horizontal-padding;
       }
     }
 
@@ -149,7 +149,7 @@ $material-dropdowneditor-invalid-badge-size: $material-invalid-badge-size + $mat
 
 .dx-dropdowneditor-overlay.dx-popup-wrapper {
   .dx-overlay-content {
-    box-shadow: $dropdown-widgets-shadow;
+    box-shadow: $material-base-dropdown-widgets-shadow;
     overflow: hidden;
   }
 }
