--- a/scss/widgets/material/fieldset/_index.scss
+++ b/scss/widgets/material/fieldset/_index.scss
@@ -6,6 +6,11 @@
 @use "../common/sizes" as *;
 @use "../common" as *;
 @use "../typography" as *;
+@use "../form/sizes" as *;
+@use "../checkBox/sizes" as *;
+@use "../switch/sizes" as *;
+@use "../slider/sizes" as *;
+
 
 // adduse
 
@@ -15,6 +20,7 @@ $material-field-value-top-padding: 21px;
 $material-field-value-horizontal-padding: $material-base-inline-horizontal-padding;
 $material-field-value-bottom-padding: 20px;
 $material-fieldset-attention-icon-offset: $material-base-inline-horizontal-padding + $material-invalid-badge-size;
+$material-radiogroup-min-height: 26px;
 
 $material-mobile-fieldset-vertical-margin: 20px;
 $material-mobile-fieldset-horizontal-margin: 15px;
