--- a/scss/widgets/material/filterBuilder/_index.scss
+++ b/scss/widgets/material/filterBuilder/_index.scss
@@ -67,7 +67,7 @@
 
 .dx-filterbuilder-overlay {
   &.dx-popup-wrapper > .dx-overlay-content {
-    box-shadow: $dropdown-widgets-shadow;
+    box-shadow: $material-base-dropdown-widgets-shadow;
   }
 
   &.dx-filterbuilder-operations {
