--- a/scss/widgets/material/gantt/_index.scss
+++ b/scss/widgets/material/gantt/_index.scss
@@ -5,6 +5,7 @@
 @use "../sizes" as *;
 @use "../../base/gantt" as *;
 @use "../gridBase/colors" as *;
+@use "../form/sizes" as *;
 
 // adduse
 @use "../splitter";
