--- a/scss/widgets/material/gridBase/_sizes.scss
+++ b/scss/widgets/material/gridBase/_sizes.scss
@@ -25,6 +25,7 @@ $material-grid-base-command-edit-column-width: null !default;
 $material-grid-base-command-edit-column-with-icons-width: null !default;
 $material-grid-base-adaptive-column-height: null !default;
 $material-grid-base-treeview-search-margin: null !default;
+$material-grid-base-nodata-font-size: null !default;
 $material-command-edit-icon-size: null !default;
 $material-command-edit-icon-margin: null !default;
 $material-filter-row-between-editor-padding: null !default;
@@ -57,6 +58,7 @@ $material-command-column-additional-right-margin: null !default;
   $material-grid-base-command-edit-column-with-icons-width: 93px;
   $material-grid-base-adaptive-column-height: 40px;
   $material-grid-base-treeview-search-margin: 10px;
+  $material-grid-base-nodata-font-size: 17px;
   $material-command-edit-icon-size: 18px;
   $material-command-edit-icon-margin: 2px;
 
@@ -91,6 +93,7 @@ $material-command-column-additional-right-margin: null !default;
   $material-grid-base-command-edit-column-with-icons-width: 80px;
   $material-grid-base-adaptive-column-height: 26px;
   $material-grid-base-treeview-search-margin: 10px;
+  $material-grid-base-nodata-font-size: 14px;
   $material-command-edit-icon-size: 16px;
   $material-command-edit-icon-margin: 2px;
 
