--- a/scss/widgets/material/pivotGrid/_sizes.scss
+++ b/scss/widgets/material/pivotGrid/_sizes.scss
@@ -3,11 +3,19 @@
 // adduse
 
 $material-pivotgrid-cell-padding: null !default;
+$pivotgrid-common-left-right-padding: null !default;
+
+$pivotgrid-empty-column-width: 19px;
+$pivotgrid-common-top-bottom-padding: 7px;
+$pivotgrid-field-indicators-offset: 6px;
+$pivotgrid-indicators-line-height: 12px;
 
 @if $size == "default" {
   $material-pivotgrid-cell-padding: 10px 14px;
+  $pivotgrid-common-left-right-padding: 10px;
 }
 
 @else if $size == "compact" {
   $material-pivotgrid-cell-padding: 7px 8px;
+  $pivotgrid-common-left-right-padding: 8px;
 }
