--- a/scss/widgets/material/toolbar/_index.scss
+++ b/scss/widgets/material/toolbar/_index.scss
@@ -8,6 +8,8 @@
 @use "../button" as *;
 @use "../button/colors" as *;
 @use "../button/sizes" as *;
+@use "../typography/sizes" as *;
+@use "../checkBox/sizes" as *;
 
 // adduse
 @use "../dropDownMenu";
