--- a/scss/widgets/material/checkBox/_sizes.scss
+++ b/scss/widgets/material/checkBox/_sizes.scss
@@ -7,12 +7,14 @@ $material-checkbox-ripple-size: null !default;
 $material-checkbox-arrow-icon-size: null !default;
 $material-checkbox-intermidiate-icon-size: null !default;
 $material-checkbox-border-radius: null !default;
+$material-checkbox-size: null !default;
 
 @if $size == "default" {
   $material-checkbox-ripple-size: 40px;
   $material-checkbox-arrow-icon-size: 16px;
   $material-checkbox-intermidiate-icon-size: 20px;
   $material-checkbox-border-radius: $checkbox-icon-border-radius;
+  $material-checkbox-size: 18px;
 }
 
 @else if $size == "compact" {
@@ -20,4 +22,5 @@ $material-checkbox-border-radius: null !default;
   $material-checkbox-arrow-icon-size: 14px;
   $material-checkbox-intermidiate-icon-size: 18px;
   $material-checkbox-border-radius: 2px;
+  $material-checkbox-size: 16px;
 }
