--- a/scss/widgets/material/common/_sizes.scss
+++ b/scss/widgets/material/common/_sizes.scss
@@ -3,6 +3,11 @@
 // adduse
 
 $material-invalid-badge-size: null !default;
+$material-line-height: 1.2857;
+
+$material-inline-borderedwidget-inner-size:
+  $material-base-inline-widget-height -
+  $material-base-border-width * 2;
 
 @if $size == "default" {
   $material-invalid-badge-size: $material-base-icon-size - 2px;
