--- a/scss/widgets/material/dropDownMenu/_index.scss
+++ b/scss/widgets/material/dropDownMenu/_index.scss
@@ -9,7 +9,7 @@
 
 .dx-dropdownmenu-popup-wrapper {
   .dx-overlay-content {
-    box-shadow: $dropdown-widgets-shadow;
+    box-shadow: $material-base-dropdown-widgets-shadow;
 
     .dx-popup-content {
       padding: 1px;
