--- a/scss/widgets/material/popup/_index.scss
+++ b/scss/widgets/material/popup/_index.scss
@@ -8,6 +8,7 @@
 @use "../toolbar" as *;
 @use "../toolbar/sizes" as *;
 @use "../button" as *;
+@use "../typography/sizes" as *;
 
 // adduse
 @use "../overlay";
