--- a/scss/widgets/material/selectBox/_index.scss
+++ b/scss/widgets/material/selectBox/_index.scss
@@ -10,7 +10,7 @@
 
 .dx-selectbox-popup-wrapper {
   .dx-overlay-content {
-    box-shadow: $dropdown-widgets-shadow;
+    box-shadow: $material-base-dropdown-widgets-shadow;
   }
 
   .dx-popup-content {
