--- a/scss/widgets/material/treeList/_sizes.scss
+++ b/scss/widgets/material/treeList/_sizes.scss
@@ -2,3 +2,6 @@
 
 // adduse
 
+$treelist-expanded-icon-margin-left: 5px;
+$treelist-collapsed-icon-margin-left: 6px;
+$treelist-icon-margin-top: $material-base-icon-size / 2;
