--- a/styles/widgets/common/gridBase.less
+++ b/styles/widgets/common/gridBase.less
@@ -508,7 +508,7 @@
                     }
                 }
 
-                .dx-link-icon {
+                .dx-link {
                     display: inline-block;
                 }
             }
