--- a/styles/widgets/material/gridBase.material.less
+++ b/styles/widgets/material/gridBase.material.less
@@ -480,7 +480,7 @@
             }
 
             .dx-tag-container {
-                min-height: $material-grid-base-cell-height;
+                min-height: @MATERIAL_GRID_BASE_CELL_HEIGHT;
                 padding: 0;
             }
 
