--- a/styles/widgets/common/gridBase.less
+++ b/styles/widgets/common/gridBase.less
@@ -498,6 +498,7 @@
                 text-overflow: clip;
                 width: @GRID_COMMAND_EDIT_COLUMN_WIDTH;
                 min-width: @GRID_COMMAND_EDIT_COLUMN_WIDTH;
+                white-space: nowrap;
 
                 &.dx-command-edit-with-icons {
                     width: @GRID_COMMAND_EDIT_COLUMN_WITH_ICONS_WIDTH;
